@@ -1,3 +1,8 @@
+2013-06-09 Mon  Jari Aalto  <jari.aalto@cante.net>
+
+	* epackage.el: (top level::Details of the info file fields):
+	Document that Vcs-Url can span multiple lines for http type.
+
 2013-06-03 Mon  Jari Aalto  <jari.aalto@cante.net>
 
 	* epackage.el (epackage-autoload-generate-loaddefs-dir): If
